--- a/src/app/dailogs/report-issue/report-issue.component.html
+++ b/src/app/dailogs/report-issue/report-issue.component.html
@@ -4,7 +4,7 @@
     </mat-card-header>
     <mat-card-content>
         <div>
-          <p>If you find any issue, <a href="mailto:tech.par@gmail.com"></a>report it to abcxyz@xyz.com</p>
+          <p>For any issues, please mai to : <a href="mailto:tech.dvpartners@gmail.com">tech.dvpartners@gmail.com</a></p>
         </div>
     </mat-card-content>
   </mat-card>
