--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" fxLayoutAlign="center center">
-    <span>Sales Analytics</span>
+    <span>SF Pricing Framework</span>
 </mat-toolbar>
 
 <div class="content login" fxLayout="row" fxLayout.xs="column " fxFlexFill fxLayoutAlign="center center">
