--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,12 +5,13 @@
 <div class="content login" fxLayout="row" fxLayout.xs="column " fxFlexFill fxLayoutAlign="center center">
 
   <div fxFlex="30"  fxFlex.xs="100"  fxFlex.sm="80">
-          <mat-card class="example-card">
+    <form class="example-form"  [formGroup]="loginForm">    
+    <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>Login</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-              <form class="example-form"  [formGroup]="loginForm">
+            
                 <div class="example-container" fxLayout="column">
                   <mat-form-field fxFlex>
                     <input matInput placeholder="Username" formControlName="username">
@@ -21,14 +22,15 @@
                   </mat-form-field>
 
                 </div>
-              </form>
+             
               <!-- <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner> -->
             </mat-card-content>
             <mat-card-actions>
-              <button mat-raised-button (click)="login()" color="primary">Login</button>
+              <button mat-raised-button type="submit" (click)="login()" (keyup.enter)="login()" color="primary">Login</button>
               <mat-error>{{error}}</mat-error>
             </mat-card-actions>
           </mat-card>
+        </form>
   </div>
 
 </div>
