--- a/src/app/sale-nav/sale-nav.component.html
+++ b/src/app/sale-nav/sale-nav.component.html
@@ -49,6 +49,20 @@
           <button color="primary" mat-raised-button class = "mat-raised-button mat-primary">Apply Filters</button>
         </div> -->
         <mat-accordion>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Super Category
+                  </mat-panel-title>
+                </mat-expansion-panel-header>
+                <div class="list-container">
+                <mat-selection-list  #supercatgory  [(ngModel)]="supcatSelectedOptions" (ngModelChange)="onChangesupCat($event)">
+                  <mat-list-option [checkboxPosition]="'before'" *ngFor="let supcat of superCategories" [value]="supcat">
+                    {{supcat}}
+                  </mat-list-option>
+                </mat-selection-list>
+                </div>
+              </mat-expansion-panel>
           <mat-expansion-panel>
             <mat-expansion-panel-header>
               <mat-panel-title>
@@ -116,7 +130,7 @@
         <mat-icon aria-label="Side nav toggle icon" style="color: #ffffff">menu</mat-icon>
       </button>
       <div align="center" style="width:100%">
-        <span style="color: #ffffff">SF Pricing Framework</span>
+        <span style="color: #ffffff"   (click)="drawerEnd.close()">SF Pricing Framework</span>
       </div>
       <span class="example-spacer"></span>
       <button
