--- a/src/app/dailogs/add-user/add-user.component.html
+++ b/src/app/dailogs/add-user/add-user.component.html
@@ -15,7 +15,7 @@
 
           </div>
         </form>
-      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+      <mat-spinner style="display:none"></mat-spinner>
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button (click)="addUser()" color="primary">Add User</button>
